better way to fix weird horizontal scrollbar: non0-static position so absolute descendants respect overflow of ancestor

--- a/src/components/ButtonRow/ButtonRow.module.css
+++ b/src/components/ButtonRow/ButtonRow.module.css
@@ -1,5 +1,7 @@
 .buttonRow {
+  position: relative; /* so those position: absolute visually-hidden spans respect scroll */
   overflow-x: auto;
+
   padding: 1rem 0;
   white-space: nowrap;
 }
